fix blocks by cutting off large invisible elements

--- a/src/working_memory_games/games/blocks/blocks.css
+++ b/src/working_memory_games/games/blocks/blocks.css
@@ -10,7 +10,7 @@ body .modal {
 #game {
   display: block;
   bottom: 2em;
-  overflow: visible;
+  overflow: hidden;
   background: white;
   border: 1px solid black;
 }
